--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -7,3 +7,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-size: 50px;
+}
