--- a/src/stylesheets/HarryList.css
+++ b/src/stylesheets/HarryList.css
@@ -1,6 +1,7 @@
 .PotterList {
   list-style-type: none;
   display: grid;
+  grid-gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-template-rows: auto;
 }
