--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .title {
